--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,16 @@ a {
   color: black;
 }
 a:hover {
-  color: #00b300;
+  color: #00b300 !important;
+}
+.project-link {
+  text-decoration: underline;
+  text-decoration-color: blue;
+  color: blue !important;
+}
+.project-link:hover {
+  color: #00b300 !important;
+  text-decoration: none;
 }
 body {
   font-family: Inter;
